--- a/views/index.html
+++ b/views/index.html
@@ -2,21 +2,109 @@
  <html lang="en">
  <head>
     <meta charset="UTF-8">
+    <title>Bienvenidos al Vivero Naturalia</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+       <link rel = "stylesheet" href="/css/index.css">
     <title>Document</title>
  </head>
+
  <body>
-    <header>
-     <h1> Esta es la pagina de inicio de Vivero Naturalia></h1>  
+ <!-- <header>
+<iframe src="/header.html"></iframe>
+</header> -->
 
-    </header>
+  <!-- Header -->
+  <header>
+   <section id="header">
+    <div class = "header container">
+      <div class="nav-bar">
+        <div class="logo">
+          <a href="/">
+            <img src="img/logo_small.png" alt ="Logo de Vivero Naturalia" width="10" height="10">
+          </a>
+        </div>
 
+     <div class="top-header">
+                 <div class="nav-list">
+           <div class="hamburger">
+             <div class="bar"></div>
+           </div>
+           <ul>
+             <li><a href="/" data-after="/">Inicio</a></li>
+             <li><a href="quienes_somos">Quienes Somos</a></li>
+             <li><a href="servicios">Servicios</a></li>
+             <li><a href="productos">Productos</a></li>
+             <li><a href="preguntas">Preguntas</a></li>
+             <li><a href="contactanos">Contactanos</a></li>
+           </ul>
+         </div>
+       </div>
+     </div>
+   </section>
+ </header>
+ <!-- End Header -->
 
-    <footer>
+ <!-- init Section  -->
+ 
+   <div class="init-container">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/img/bannerI4.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/bannerI3.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="/img/bannerI5.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+    
+   </div>
+ 
+ <!-- End init Section  -->
 
+ 
+ <!-- Footer -->
+ <footer>
+   <section id="footer">
+     <div class="footer container">
+       <div class="brand">
+         <h1><span>V</span>ivero <span>N</span>aturalia</h1>
+       </div>
+       <h2>Siguenos en redes Sociales</h2>
+       <div class="social-icon">
+        
+         <div class="social-item">
+           <a href="http://www.facebook.com" target="_blank"><img src="./img/redes_sociales/facebook.png" /></a>
+         </div>
 
+         <div class="social-item">
+           <a href="http://www.instagram.com" target="_blank"><img src="./img/redes_sociales/instagram.png" /></a>
+         </div>
+         <div class="social-item">
+           <a href="https://twitter..com" target="_blank"><img src="./img/redes_sociales/twitter.png" /></a>
+         </div>
 
-    </footer>
- </body>
- </html>
+         <div class="social-item">
+           <a href="https://web.whatsapp.com" target="_blank"><img src="./img/redes_sociales/whatsapp.png" /></a>
+         </div>
+       </div>
+
+       <p>Copyright © 2022 Vivero Naturalia. All rights reserved</p>
+     </div>
+
+   </section>
+ </footer>
+ <!-- End Footer -->
+
+ <!-- <script src="./app.js"></script> -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+</body>
+
+</html> 
