--- a/src/views/pages/products.ejs
+++ b/src/views/pages/products.ejs
@@ -98,6 +98,16 @@
 <form>
   <form>
     <div class="form-group">
+      <label for="id">Id</label>
+      <input
+        type="text"
+        class="form-control"
+        id="id"
+        aria-describedby="emailHelp"
+        placeholder="Nombre"
+      />
+    </div>
+    <div class="form-group">
       <label for="nombre">Nombre</label>
       <input
         type="text"
@@ -154,6 +164,8 @@
     </div>
     <div>
       <button id="btnCreate">Crear Producto</button>
+      <button id="btnSearch">Buscar Producto</button>
+      <button id="btnUpdate">Actualizar Producto</button>
     </div>
   </form>
 </form>
