--- a/src/views/pages/products.ejs
+++ b/src/views/pages/products.ejs
@@ -166,23 +166,14 @@
       <button id="btnCreate">Crear Producto</button>
       <button id="btnSearch">Buscar Producto</button>
       <button id="btnUpdate">Actualizar Producto</button>
+      <button id="btnDelete">Eliminar Producto</button>
     </div>
   </form>
 </form>
 <!-- CREATE -->
 
 <!-- LIST -->
-<div style="margin-left: 50px">
-  <% data.map(item=>{ %>
-
-  <h5><%= item.id %></h5>
-  <h1><%= item.nombre %></h1>
-  <h4><%= item.precio %></h4>
-  <h4><%= item.categoria %></h4>
-  <h4><%= item.etiqueta %></h4>
-
-  <% }) %>
-</div>
+<div style="margin-left: 50px" id="lista_productos"></div>
 <!-- LIST -->
 
 <script src="/js/products.js"></script>
