--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,28 +1,28 @@
 <!-- /* porciones de codigo que podemos utilizar en varias partes del proyecto */ -->
 <div class="wrapper">
-<div class="container">
-  <header class="encabezado">
-    <div class="logo">
-      <a href="/"><img src="/img/logo_small.png" alt="logo_vivero" /></a>
-    </div>
-    <div class="menu">
-      <nav class="menuIzquierdo">
-        <ul class="opcionesIzquierdo">
-          <!-- <li><a href="/#">Inicio</a></li> -->
-          <li><a href="/about">Quienes somos</a></li>
-          <li><a href="#">Preguntas</a></li>
-        </ul>
-      </nav>
-      <nav class="menuDerecho">
-        <ul class="opcionesDerecho">
-          <li><a href="/products">Productos</a></li>
-          <li><a href="/services">Servicios</a></li>
-          <li><a href="#">Contactanos</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-</div>
+  <div class="container">
+    <header class="encabezado">
+      <div class="logo">
+        <a href="/"><img src="/img/logo_small.png" alt="logo_vivero" /></a>
+      </div>
+      <div class="menu">
+        <nav class="menuIzquierdo">
+          <ul class="opcionesIzquierdo">
+            <!-- <li><a href="/#">Inicio</a></li> -->
+            <li><a href="/about">Quienes somos</a></li>
+            <li><a href="#">Preguntas</a></li>
+          </ul>
+        </nav>
+        <nav class="menuDerecho">
+          <ul class="opcionesDerecho">
+            <li><a href="/productos">Productos</a></li>
+            <li><a href="/services">Servicios</a></li>
+            <li><a href="#">Contactanos</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+  </div>
 </div>
 
 <!-- <header class = "encabezado">
