--- a/src/views/pages/products.ejs
+++ b/src/views/pages/products.ejs
@@ -96,15 +96,14 @@
 
 <!-- CREATE -->
 <form>
-  <form>
-    <div class="form-group">
+   <div class="form-group">
       <label for="id">Id</label>
       <input
         type="text"
         class="form-control"
         id="id"
         aria-describedby="emailHelp"
-        placeholder="Nombre"
+        placeholder="El id es generado automaticamente con el boton crear"
       />
     </div>
     <div class="form-group">
@@ -123,7 +122,7 @@
         type="text"
         class="form-control"
         id="descripcion"
-        placeholder="Password"
+        placeholder="Ingrese la descripciónm corta del producto (60 caracteres)"
       />
     </div>
     <div class="form-group">
@@ -132,7 +131,7 @@
         type="text"
         class="form-control"
         id="precio"
-        placeholder="Password"
+        placeholder="Ingrese precio solo #"
       />
     </div>
     <div class="form-group">
@@ -141,7 +140,7 @@
         type="text"
         class="form-control"
         id="categoria"
-        placeholder="Password"
+        placeholder="Ingrese la categoria del producto"
       />
     </div>
     <div class="form-group">
@@ -150,7 +149,7 @@
         type="text"
         class="form-control"
         id="etiqueta"
-        placeholder="Password"
+        placeholder="Ingrese la etiqueta del producto"
       />
     </div>
     <div class="form-group">
@@ -159,7 +158,7 @@
         type="text"
         class="form-control"
         id="imagen"
-        placeholder="Password"
+        placeholder="Selecciona la imagen del producto"
       />
     </div>
     <div>
@@ -169,7 +168,7 @@
       <button id="btnDelete">Eliminar Producto</button>
     </div>
   </form>
-</form>
+
 <!-- CREATE -->
 
 <!-- LIST -->
